--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "hardhat-project",
   "scripts": {
-    "test": "npx hardhat test",
-    "deploy:kovan": "npx hardhat run scripts/deploy.js --network \"kovan\"",
-    "deploy:halo-kovan": "npx hardhat run scripts/deployHalo.js --network \"kovan\"",
-    "deploy:onlyrewards-kovan": "npx hardhat run scripts/deployOnlyRewardsContract.js --network \"kovan\""
+    "contracts-test": "cd ./contracts/hardhat && npx hardhat test",
+    "deploy:kovan": "cd ./contracts/hardhat && npx hardhat run ../scripts/deploy.js --network \"kovan\"",
+    "deploy:halo-kovan": "cd ./contracts/hardhat && npx hardhat run ../scripts/deployHalo.js --network \"kovan\"",
+    "deploy:onlyrewards-kovan": "cd ./contracts/hardhat && npx hardhat run ../scripts/deployOnlyRewardsContract.js --network \"kovan\""
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.1",
