added halodao-rewards submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "halodao-interface"]
 	path = halodao-interface
 	url = git@github.com:HaloDAO/halodao-interface.git
+[submodule "halodao-rewards"]
+	path = halodao-rewards
+	url = git@github.com:HaloDAO/halo-rewards.git
