--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "### Initialize related submodules ``` > git clone git@github.com:HaloDAO/halodao-exchange.git > cd halodao-exchange > git checkout develop ```",
   "main": "index.js",
   "scripts": {
-    "start": "cd halodao-interface && yarn start",
+    "start-interface": "cd halodao-interface && yarn start",
     "install-interface": "cd ./halodao-interface && yarn install",
     "install-rewards": "cd ./halodao-rewards && npm install",
     "test-rewards": "cd ./halodao-rewards && npx hardhat test"
