--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = halodao-rewards
 	url = git@github.com:HaloDAO/halo-rewards.git
 	branch = develop
+[submodule "halodao-amm"]
+	path = halodao-amm
+	url = git@github.com:HaloDAO/dfx-protocol-clone.git
+	branch = develop
