--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "### Initialize related submodules ``` > git clone git@github.com:HaloDAO/halodao-exchange.git > cd halodao-exchange > git checkout develop ```",
   "main": "index.js",
   "scripts": {
+    "install-interface": "cd halodao-interface && yarn install",
     "start-interface": "cd halodao-interface && yarn start",
-    "install-interface": "cd ./halodao-interface && yarn install",
-    "install-rewards": "cd ./halodao-rewards && npm install",
-    "test-rewards": "cd ./halodao-rewards && npx hardhat test"
+    "install-rewards": "cd halodao-rewards && npm install",
+    "test-rewards": "cd halodao-rewards && npx hardhat test",
+    "install-amm": "cd halodao-amm && yarn install",
+    "test-amm": "cd halodao-amm && yarn test"
   },
   "repository": {
     "type": "git",
