Updated halodao-amm target branch from dev to develop

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 [submodule "halodao-amm"]
 	path = halodao-amm
 	url = git@github.com:HaloDAO/dfx-protocol-clone.git
-	branch = dev
+	branch = develop
