--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/HaloDAO/halodao-exchange/issues"
   },
-  "homepage": "https://github.com/HaloDAO/halodao-exchange#readme"
+  "homepage": "https://github.com/HaloDAO/halodao-exchange#readme",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.6.5"
+  }
 }
